# mothpad

./: .gitattributes  .gitignore  LICENSE.md  README.md  THIRD_PARTY.md
c/: build.ps1
c/pico/: CMakeLists.txt  README.md  build-pico.ps1  mothpad_pico_diag.c  mothpad_pico_legacy_diag.c  mothpad_pico_main.c  mothpad_picocalc_platform.c  mothpad_picocalc_platform.h  mothpad_picocalc_platform_legacy.c  mothpad_splash_bitmap.h
c/src/: mothpad.c  mothpad.h
c/tests/: mothpad_tests.c
docs/: build-handoff.md  field-report-2026-06-07-southbank.md  mothpad-spec.md  picocalc-software-ideas.md  refterm-reading.md  shift-left-right-report.md  status.md
src/: editor_core.py  terminal_demo.py
tests/: test_editor_core.py
